# DGM-LANGUAGE-PROGRAMME

./: Cargo.toml  README.md  dgm.toml  main.dgm
examples/api-server/: README.md  dgm.toml  main.dgm
examples/api-server/lib/: config.dgm  metrics.dgm  middleware.dgm  responses.dgm  store.dgm
examples/api-server/results/: benchmark-lock-state.json  benchmark-phaseb-20260404-072324-summary.json  benchmark-phaseb-20260404-072324.json  benchmark-phaseb-20260404-073513-summary.json  benchmark-phaseb-20260404-073513.json  benchmark-phaseb-20260404-074631-summary.json  benchmark-phaseb-20260404-074631.json  benchmark-phaseb-20260404-075508-summary.json  benchmark-phaseb-20260404-075508.json  benchmark-phaseb-20260404-080903-summary.json  benchmark-phaseb-20260404-080903.json  benchmark-phaseb-20260404-082330-summary.json  benchmark-phaseb-20260404-082330.json  benchmark-phaseb-20260404-101546-summary.json  benchmark-phaseb-20260404-101546.json  benchmark-phaseb-20260404-103331-summary.json  benchmark-phaseb-20260404-103331.json  benchmark-phaseb-20260404-104931-summary.json  benchmark-phaseb-20260404-104931.json  benchmark-smoke.json  (+36 more)
src/: ast.rs  bundle.rs  concurrency.rs  environment.rs  error.rs  interpreter.rs  io_runtime.rs  lexer.rs  lib.rs  main.rs  memory.rs  package_manager.rs  parser.rs  request_scope.rs  token.rs  vm.rs
src/stdlib/: collections.rs  config_mod.rs  debug_mod.rs  http_mod.rs  io_mod.rs  json_mod.rs  log_mod.rs  mod.rs  net_mod.rs  os_mod.rs  path_mod.rs  runtime_mod.rs  string_utils.rs  thread_mod.rs  time_mod.rs
tests/: feature_tests.rs
(+4 files in other folders)
