[package]
name = "dgm"
version = "0.3.0"
edition = "2021"
description = "DGM Programming Language — a complete interpreted language"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
tiny_http = "0.12"
regex = "1"
sha2 = "0.10"
md-5 = "0.10"
base64 = "0.22"
chrono = "0.4"
rand = "0.8"
rustyline = "14"
toml = "0.8"
flate2 = "1"
tar = "0.4"
semver = "1"
memmap2 = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "io-util", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "http2"] }
libc = "0.2"
